Closed Bug 1564894 Opened 6 years ago Closed 6 years ago

favicon-related browser_startup_mainthreadio.js failures with the 201907081345 SQLite snapshot build

Categories

(Toolkit :: Places, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Iteration:
70.1 - Jul 8 - 21
Tracking Status
firefox70 --- fixed

People

(Reporter: RyanVM, Assigned: mak)

References

Details

Attachments

(1 file)

When testing the latest SQLite snapshot build on Try (201907081345), I encountered a reproducible failure in browser_startup_mainthreadio.js on Windows 7.

https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=255617946&repo=try&lineNumber=2115

TEST-UNEXPECTED-FAIL | browser/base/content/test/performance/browser_startup_mainthreadio.js | unexpected stat on C:\Users\task_1562716606\AppData\Local\Temp\mz_etilqs_nvfkWm1nHVXEYx9 before becoming idle -
Stack trace:
Connection::executeSql CREATE INDEX IF NOT EXISTS moz_icons_iconurlhashindex ON moz_icons (fixed_icon_url_hash)
get (resource://gre/modules/PlacesUtils.jsm:1904:0)
resource://gre/modules/PlacesUtils.jsm:2021:0
get (resource://gre/modules/XPCOMUtils.jsm:124:0)
promiseDBConnection (resource://gre/modules/PlacesUtils.jsm:1495:0)
fetchAnnotatedPages (resource://gre/modules/History.jsm:200:0)
bound (self-hosted:974:0)
ensureInitialized/this._initializePromise< (resource://gre/modules/DownloadHistory.jsm:193:0)
ensureInitialized (resource://gre/modules/DownloadHistory.jsm:189:0)
getList (resource://gre/modules/DownloadHistory.jsm:71:0)
DownloadsDataCtor/this._promiseList< (resource:///modules/DownloadsCommon.jsm:713:0)
promise callback
XREMain::XRE_main

TEST-UNEXPECTED-FAIL | browser/base/content/test/performance/browser_startup_mainthreadio.js | unexpected write on C:\Users\task_1562716606\AppData\Local\Temp\mz_etilqs_nvfkWm1nHVXEYx9 before becoming idle -
Stack trace:
Connection::executeSql CREATE INDEX IF NOT EXISTS moz_icons_iconurlhashindex ON moz_icons (fixed_icon_url_hash)
get (resource://gre/modules/PlacesUtils.jsm:1904:0)
resource://gre/modules/PlacesUtils.jsm:2021:0
get (resource://gre/modules/XPCOMUtils.jsm:124:0)
promiseDBConnection (resource://gre/modules/PlacesUtils.jsm:1495:0)
fetchAnnotatedPages (resource://gre/modules/History.jsm:200:0)
bound (self-hosted:974:0)
ensureInitialized/this._initializePromise< (resource://gre/modules/DownloadHistory.jsm:193:0)
ensureInitialized (resource://gre/modules/DownloadHistory.jsm:189:0)
getList (resource://gre/modules/DownloadHistory.jsm:71:0)
DownloadsDataCtor/this._promiseList< (resource:///modules/DownloadsCommon.jsm:713:0)
promise callback
XREMain::XRE_main

TEST-UNEXPECTED-FAIL | browser/base/content/test/performance/browser_startup_mainthreadio.js | unexpected write on C:\Users\task_1562716606\AppData\Local\Temp\mz_etilqs_nvfkWm1nHVXEYx9 before becoming idle -
Stack trace:
Connection::executeSql CREATE INDEX IF NOT EXISTS moz_pages_w_icons_urlhashindex ON moz_pages_w_icons (page_url_hash)
get (resource://gre/modules/PlacesUtils.jsm:1904:0)
resource://gre/modules/PlacesUtils.jsm:2021:0
get (resource://gre/modules/XPCOMUtils.jsm:124:0)
promiseDBConnection (resource://gre/modules/PlacesUtils.jsm:1495:0)
fetchAnnotatedPages (resource://gre/modules/History.jsm:200:0)
bound (self-hosted:974:0)
ensureInitialized/this._initializePromise< (resource://gre/modules/DownloadHistory.jsm:193:0)
ensureInitialized (resource://gre/modules/DownloadHistory.jsm:189:0)
getList (resource://gre/modules/DownloadHistory.jsm:71:0)
DownloadsDataCtor/this._promiseList< (resource:///modules/DownloadsCommon.jsm:713:0)
promise callback
XREMain::XRE_main

On 32 bit we don't enable TEMP_STORE by default, that means databases may end up creating tmp files when necessary.
https://searchfox.org/mozilla-central/rev/40ef22080910c2e2c27d9e2120642376b1d8b8b2/third_party/sqlite3/src/moz.build#90

The favicons creation connection is a short lived one, so we can use temp_store for it.

Status: NEW → ASSIGNED
Iteration: --- → 70.1 - Jul 8 - 21
Priority: -- → P1
Pushed by mak77@bonardo.net: https://hg.mozilla.org/integration/autoland/rev/723cf15f8cb4 Use a memory temp store when creating the favicons database. r=Standard8
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: