Bug 1564894 - Use a memory temp store when creating the favicons database. r=Standard8

Differential Revision: https://phabricator.services.mozilla.com/D37594